--- a/single-blog.html
+++ b/single-blog.html
@@ -134,7 +134,7 @@
                             <h3 class="p-intro-ttl__sub">ヘルシーな豆腐とモリンガのさわやかなディップ</h3>
                             <h2 class="p-intro-ttl__main">豆腐とモリンガのディップ</h2>
                         </div>
-                        <div class="p-intro-inner">
+                        <div class="p-intro-cont__inner">
                             <p>豆腐とモリンガ、アンチョビ、オリーブオイルだけ
                                 でも美味しくお召し上がりいただけます。
                                 和風にしたいときワサビや醤油を足したり、
@@ -160,9 +160,8 @@
                         <video src="video.mp4" controls></video>
                     </div>
                     <div class="p-detail-explain">
-                        <div class="p-detail-explain__ingredients">
-                            <div class="p-detail-explain__ttl"><p>■材料（２～３人分）</p></div>
-                            <table>
+                        <div class="p-detail-explain__ttl"><p>▪︎材料（２～３人分）</p></div>
+                        <table>
                                 <tbody>
                                     <tr>
                                         <td>豆腐</td>
@@ -201,19 +200,73 @@
                                         <td>適量</td>
                                     </tr>
                                 </tbody>
-                            </table>
-                        </div>
-                        <div class="p-detail-explain__method">
-                            <div class="p-detail-explain__ttl"><p>作り方</p></div>
-                            <div class="p-detail-explain__inner">
-                                
-                            </div>
-                        </div>
+                        </table>
+                        <div class="p-detail-explain__ttl"><p>作り方</p></div>
+                        <table>
+                                <tbody>
+                                    <tr>
+                                        <td>❶豆腐を流水で洗い、ザルにあげペーパーで
+                                            表面の水分を拭く。</td>
+                                    </tr>
+                                    <tr>
+                                        <td>❷アンチョビをみじん切りにする。</td>
+                                    </tr>
+                                    <tr>
+                                        <td>❸１と２のアンチョビをミキサーに入れ、回す。
+                                            （またはすり鉢であたる）</td>
+                                    </tr>
+                                    <tr>
+                                        <td>❹３にオリーブオイルを３回にわけて入れ、
+                                            その都度ミキサーをかけ油分と水分が分離しない
+                                            ようにする。</td>
+                                    </tr>
+                                    <tr>
+                                        <td>❺４にお好みでワサビ・ハチミツ・醤油等を入れ
+                                            ミキサーを回す。</td>
+                                    </tr>
+                                    <tr>
+                                        <td>❻器に盛り冷蔵庫でしっかり冷やす。</td>
+                                    </tr>
+                                </tbody>
+                        </table>
                     </div>
                 </div>
             </section>
             <section class="p-review">
 
+            </section>
+            <section class="p-products">
+                <div class="p-products-inner">
+                    <div class="p-products-ttl c-sec-ttl">
+                        <h3>PRODUCTS</h3>
+                        <p>商品のご紹介</p>
+                    </div>
+                    <div class="p-products-wrap">
+                        <ul class="p-products-list">
+                            <li class="p-products-item">
+                                <a href="#">
+                                    <figure class="p-products-img">
+                                        <img src="img/products.png" alt="moringa powder">
+                                    </figure>
+                                </a>
+                            </li>
+                            <li class="p-products-item">
+                                <a href="#">
+                                    <figure class="p-products-img">
+                                        <img src="img/products.png" alt="moringa soba">
+                                    </figure>
+                                </a>
+                            </li>
+                            <li class="p-products-item">
+                                <a href="#">
+                                    <figure class="p-products-img">
+                                        <img src="img/products.png" alt="coupon">
+                                    </figure>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </section>
 
         </main>
