--- a/front-page.html
+++ b/front-page.html
@@ -151,7 +151,7 @@
             <section class="p-recipe">
                 <div class="p-recipe-inner">
                     <div class="p-recipe-ttl c-sec-ttl">
-                        <h3>RECIPE</h3>
+                        <h3>Recipe</h3>
                         <p>レシピ</p>
                     </div>
     
@@ -169,7 +169,7 @@
                                     <div class="p-recipe-img">
                                         <figure class="p-recipe-img__inner js-img-bg object-fit">
                                             <img src="img/moringa-powder.png" alt="menu img">
-                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-new"><p>New</p></span>
                                             <span class="p-recipe-tag">ご飯・麺</span>
                                             <span class="p-recipe-coming">coming soon</span>
                                         </figure>
@@ -184,7 +184,7 @@
                                     <div class="p-recipe-img">
                                         <figure class="p-recipe-img__inner js-img-bg object-fit">
                                             <img src="img/moringa-powder.png" alt="menu img">
-                                            <span class="p-recipe-new"><p>NEW</p></span>
+                                            <span class="p-recipe-new"><p>New</p></span>
                                             <span class="p-recipe-tag">ご飯・麺</span>
                                             <span class="p-recipe-coming">coming soon</span>
                                         </figure>
@@ -334,7 +334,7 @@
             <section class="p-products">
                 <div class="p-products-inner">
                     <div class="p-products-ttl c-sec-ttl">
-                        <h3>PRODUCTS</h3>
+                        <h3>Products</h3>
                         <p>商品のご紹介</p>
                     </div>
                     <div class="p-products-wrap">
