--- a/single-blog.html
+++ b/single-blog.html
@@ -108,14 +108,19 @@
             <section class="p-menu">
                 <div class="p-menu-inner">
                     <ul class="p-menu-btns">
-                        <li class="p-menu-btn"><p>FOOD<span>ご飯・麺</span></p></li>
-                        <li class="p-menu-btn"><p>MAIN<span>メイン</span></p></li>
-                        <li class="p-menu-btn"><p>SUB<span>サイド</span></p></li>
-                        <li class="p-menu-btn"><p>DRINKSOUP<span>ドリンク・スープ</span></p></li>
-                        <li class="p-menu-btn"><p>SWEETS<span>スイーツ</span></p></li>
-                        <li class="p-menu-btn"><p>STYLE<span>和風メニュー</span></p></li>
-                        <li class="p-menu-btn"><p>STYLE<span>洋風メニュー</span></p></li>
-                        <li class="p-menu-btn"><p>STYLE<span>中華メニュー</span></p></li>
+                        <li class="p-menu-btn"><a href="">Food<span>ご飯・麺</span></a></li>
+                        <li class="p-menu-btn"><a href="">Main<span>メイン</span></a></li>
+                        <li class="p-menu-btn"><a href="">Side<span>サイド</span></a></li>
+                        <li class="p-menu-btn p-menu-btn__drink">
+                            <a href="">
+                                <span>Drink<br> Soup</span>
+                                <span>ドリンク・<br>スープ</span>
+                            </a>
+                        </li>
+                        <li class="p-menu-btn"><a href="">Sweets<span>スイーツ</span></a></li>
+                        <li class="p-menu-btn"><a href="">Style<span>和風メニュー</span></a></li>
+                        <li class="p-menu-btn"><a href="">Style<span>洋風メニュー</span></a></li>
+                        <li class="p-menu-btn"><a href="">Style<span>中華メニュー</span></a></li>
                     </ul>
                 </div>
                 <!-- /.p-menu-inner -->
@@ -123,13 +128,13 @@
             <section class="p-intro">
                 <div class="p-intro-inner">
                     <div class="p-intro-img">
-                        <figure class="p-intro-img__inner">
+                        <figure class="p-intro-img__inner js-img-bg object-fit ">
                             <img src="img/moringa.jpg" alt="">
                         </figure>
                     </div>
                     <!-- /.p-intro-img -->
                     <div class="p-intro-cont">
-                        <div class="p-intro-tag"><p>FOOD<span>ご飯・麺</span></p></div>
+                        <div class="p-intro-tag"><p>Food<span>ご飯・麺</span></p></div>
                         <div class="p-intro-ttl">
                             <h3 class="p-intro-ttl__sub">ヘルシーな豆腐とモリンガのさわやかなディップ</h3>
                             <h2 class="p-intro-ttl__main">豆腐とモリンガのディップ</h2>
@@ -153,7 +158,7 @@
             <section class="p-detail">
                 <div class="p-detail-inner">
                     <div class="p-detail-ttl c-sec-ttl">
-                        <h3>RECIPE MOVIE</h3>
+                        <h3>Recipe Movie</h3>
                         <p>レシピ動画</p>
                     </div>
                     <div class="p-detail-movie">
