--- a/single-blog.html
+++ b/single-blog.html
@@ -273,6 +273,17 @@
                     </div>
                 </div>
             </section>
+            <section class="p-cta">
+                <div class="p-cta-inner">
+                    <div class="p-cta-copy"><h3>モリンガをお買い求めの際は
+                        <br>こちらからお願いいたいします</h3>
+                    </div>
+                    <div class="p-cta-btn">
+                        <a href=""><span>食べるモリンガ</span>体験する</a>
+                    </div>
+                </div>
+                <!-- /.p-cta-inner -->
+            </section>
 
         </main>
         <footer class="l-footer">
