--- a/front-page.html
+++ b/front-page.html
@@ -22,19 +22,19 @@
                 <nav class="p-header-nav js-nav__open">
                     <ul class="p-header-nav__list">
                         <li class="p-header-nav__item">
-                            <a href="#">ホーム</a>
+                            <a href="#" ontouchstart="">ホーム</a>
                         </li>
                         <li class="p-header-nav__item js-news">
-                            <a href="#">お知らせ</a>
+                            <a href="#" ontouchstart="">お知らせ</a>
                         </li>
                         <li class="p-header-nav__item js-recipe">
-                            <a href="#">レシピ</a>
+                            <a href="#" ontouchstart="">レシピ</a>
                         </li>
                         <li class="p-header-nav__item js-products">
-                            <a href="#">商品のご紹介</a>
+                            <a href="#" ontouchstart="">商品のご紹介</a>
                         </li>
                         <li class="p-header-nav__item c-ctaBtn">
-                            <a href="/contact/">お問い合わせ</a>
+                            <a href="/contact/" ontouchstart="">お問い合わせ</a>
                         </li>
                     </ul>
                 </nav>
