--- a/single-blog.html
+++ b/single-blog.html
@@ -108,19 +108,19 @@
             <section class="p-menu">
                 <div class="p-menu-inner">
                     <ul class="p-menu-btns">
-                        <li class="p-menu-btn"><a href="">Food<span>ご飯・麺</span></a></li>
-                        <li class="p-menu-btn"><a href="">Main<span>メイン</span></a></li>
-                        <li class="p-menu-btn"><a href="">Side<span>サイド</span></a></li>
+                        <li class="p-menu-btn"><a href="" ontouchstart="">Food<span>ご飯・麺</span></a></li>
+                        <li class="p-menu-btn"><a href="" ontouchstart="">Main<span>メイン</span></a></li>
+                        <li class="p-menu-btn"><a href="" ontouchstart="">Side<span>サイド</span></a></li>
                         <li class="p-menu-btn p-menu-btn__drink">
-                            <a href="">
+                            <a href="" ontouchstart="">
                                 <span>Drink<br> Soup</span>
                                 <span>ドリンク・<br>スープ</span>
                             </a>
                         </li>
-                        <li class="p-menu-btn"><a href="">Sweets<span>スイーツ</span></a></li>
-                        <li class="p-menu-btn"><a href="">Style<span>和風メニュー</span></a></li>
-                        <li class="p-menu-btn"><a href="">Style<span>洋風メニュー</span></a></li>
-                        <li class="p-menu-btn"><a href="">Style<span>中華メニュー</span></a></li>
+                        <li class="p-menu-btn"><a href="" ontouchstart="">Sweets<span>スイーツ</span></a></li>
+                        <li class="p-menu-btn"><a href="" ontouchstart="">Style<span>和風メニュー</span></a></li>
+                        <li class="p-menu-btn"><a href="" ontouchstart="">Style<span>洋風メニュー</span></a></li>
+                        <li class="p-menu-btn"><a href="" ontouchstart="">Style<span>中華メニュー</span></a></li>
                     </ul>
                 </div>
                 <!-- /.p-menu-inner -->
@@ -273,13 +273,13 @@
                     </div>
                 </div>
             </section>
-            <section class="p-cta">
+            <section class="p-cta" style="background-image: url(img/moringa.jpg);">
                 <div class="p-cta-inner">
                     <div class="p-cta-copy"><h3>モリンガをお買い求めの際は
                         <br>こちらからお願いいたいします</h3>
                     </div>
                     <div class="p-cta-btn">
-                        <a href=""><span>食べるモリンガ</span>体験する</a>
+                        <a href=""  ontouchstart=""><span>食べるモリンガ</span>体験する</a>
                     </div>
                 </div>
                 <!-- /.p-cta-inner -->
@@ -290,19 +290,19 @@
             <div class="l-footer-inner">
                 <nav class="p-footer-nav">
                     <ul class="p-footer-nav__list">
-                        <li class="p-footer-nav__item">
+                        <li class="p-footer-nav__item" ontouchstart="">
                             <a href="">ホーム</a>
                         </li>
-                        <li class="p-footer-nav__item">
+                        <li class="p-footer-nav__item" ontouchstart="">
                             <a href="">商品について</a>
                         </li>
-                        <li class="p-footer-nav__item">
+                        <li class="p-footer-nav__item" ontouchstart="">
                             <a href="">ジャパンナチュラル研究所</a>
                         </li>
-                        <li class="p-footer-nav__item">
+                        <li class="p-footer-nav__item" ontouchstart="">
                             <a href="">ご購入はこちらから</a>
                         </li>
-                        <li class="p-footer-nav__item">
+                        <li class="p-footer-nav__item" ontouchstart="">
                             <a href="">レシピ</a>
                         </li>
                     </ul>
