--- a/single-blog.html
+++ b/single-blog.html
@@ -13,9 +13,9 @@
     </head>
 
     <body>
-        <heeder class="l-header u-zindex__1000">
+        <heeder class="l-header u-zindex__1000 js-header-scroll">
             <div class="l-header-inner">
-                <h1 class="p-header-logo">
+                <h1 class="p-header-logo js-header-h65-scroll">
                     <figure class="p-header-logo__img js-img-bg object-fit"><img src="img/moringa-powder.png" alt="main logo"></figure>
                 </h1>
 
@@ -58,16 +58,16 @@
                             <figure class="p-swiper-img js-img-bg object-fit">
                                 <img src="img/moringa.jpg" alt="">
                                 <div class="p-swiper-img__meta">
-                                    <span class="p-swiper-img__tag">モリンガパウダーで</span>
-                                    <span class="p-swiper-img__ttl">台湾風モリンガ<br>豆乳スープ台湾風モリンガ<br>豆乳スープ台湾風モリンガ<br>豆乳スープ台湾風モリンガ<br>豆乳スープ</span>
+                                    <span class="p-swiper-img__tag" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="300">モリンガパウダーで</span>
+                                    <span class="p-swiper-img__ttl" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="1000">台湾風モリンガ<br>豆乳スープ台湾風モリンガ<br>豆乳スープ台湾風モリンガ<br>豆乳スープ台湾風モリンガ<br>豆乳スープ</span>
                                 </div>
                             </figure>
                         </li>
                         <li class="p-swiper-item swiper-slide">
                             <figure class="p-swiper-img js-img-bg object-fit">
-                                <img src="img/moringa.jpg" alt="">
+                                <img src="img/moringa-powder.png" alt="">
                                 <div class="p-swiper-img__meta">
-                                    <span class="p-swiper-img__tag">モリンガパウダーで</span>
+                                    <span class="p-swiper-img__tag" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="300">モリンガパウダーで</span>
                                     <span class="p-swiper-img__ttl">洋風モリンガ<br>豆乳スープ</span>
                                 </div>
                             </figure>
@@ -83,7 +83,7 @@
                         </li>
                         <li class="p-swiper-item swiper-slide">
                             <figure class="p-swiper-img js-img-bg object-fit">
-                                <img src="img/moringa.jpg" alt="">
+                                <img src="img/products.png" alt="">
                                 <div class="p-swiper-img__meta">
                                     <span class="p-swiper-img__tag">モリンガパウダーで</span>
                                     <span class="p-swiper-img__ttl">和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ和風モリンガ豆乳スープ</span>
@@ -108,19 +108,19 @@
             <section class="p-menu">
                 <div class="p-menu-inner">
                     <ul class="p-menu-btns">
-                        <li class="p-menu-btn"><a href="" ontouchstart="">Food<span>ご飯・麺</span></a></li>
-                        <li class="p-menu-btn"><a href="" ontouchstart="">Main<span>メイン</span></a></li>
-                        <li class="p-menu-btn"><a href="" ontouchstart="">Side<span>サイド</span></a></li>
-                        <li class="p-menu-btn p-menu-btn__drink">
+                        <li class="p-menu-btn" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="300"><a href="" ontouchstart="">Food<span>ご飯・麺</span></a></li>
+                        <li class="p-menu-btn" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="400"><a href="" ontouchstart="">Main<span>メイン</span></a></li>
+                        <li class="p-menu-btn" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="500"><a href="" ontouchstart="">Side<span>サイド</span></a></li>
+                        <li class="p-menu-btn p-menu-btn__drink" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="600">
                             <a href="" ontouchstart="">
                                 <span>Drink<br> Soup</span>
                                 <span>ドリンク・<br>スープ</span>
                             </a>
                         </li>
-                        <li class="p-menu-btn"><a href="" ontouchstart="">Sweets<span>スイーツ</span></a></li>
-                        <li class="p-menu-btn"><a href="" ontouchstart="">Style<span>和風メニュー</span></a></li>
-                        <li class="p-menu-btn"><a href="" ontouchstart="">Style<span>洋風メニュー</span></a></li>
-                        <li class="p-menu-btn"><a href="" ontouchstart="">Style<span>中華メニュー</span></a></li>
+                        <li class="p-menu-btn" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="700"><a href="" ontouchstart="">Sweets<span>スイーツ</span></a></li>
+                        <li class="p-menu-btn" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="800"><a href="" ontouchstart="">Style<span>和風メニュー</span></a></li>
+                        <li class="p-menu-btn" data-aos-anchor-placement="top-bottom" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="900"><a href="" ontouchstart="">Style<span>洋風メニュー</span></a></li>
+                        <li class="p-menu-btn" data-aos-anchor-placement="top-bottom" data-aos="flip-up" data-aos-duration="2000" data-aos-delay="1000"><a href="" ontouchstart="">Style<span>中華メニュー</span></a></li>
                     </ul>
                 </div>
                 <!-- /.p-menu-inner -->
@@ -343,7 +343,6 @@
                                 <li class="p-footer-bottom__item"><a href="">アクセシビリティへの対応方針</a></li>
                             </ul>
                         </nav>
-                        
                     </div>
                     <!-- /.p-footer-bottom__inner -->
                 </div>
