--- a/single-blog.html
+++ b/single-blog.html
@@ -16,7 +16,7 @@
         <heeder class="l-header u-zindex__1000 js-header-scroll">
             <div class="l-header-inner">
                 <h1 class="p-header-logo js-header-h65-scroll">
-                    <figure class="p-header-logo__img js-img-bg object-fit"><img src="img/moringa-powder.png" alt="main logo"></figure>
+                    <a class="p-header-logo__img js-img-bg object-fit"><img src="img/moringa-powder.png" alt="main logo"></a>
                 </h1>
 
                 <nav class="p-header-nav js-nav__open">
@@ -139,7 +139,7 @@
                             <h3 class="p-intro-ttl__sub">ヘルシーな豆腐とモリンガのさわやかなディップ</h3>
                             <h2 class="p-intro-ttl__main">豆腐とモリンガのディップ</h2>
                         </div>
-                        <div class="p-intro-cont__inner">
+                        <div class="p-intro-cont__inner" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
                             <p>豆腐とモリンガ、アンチョビ、オリーブオイルだけ
                                 でも美味しくお召し上がりいただけます。
                                 和風にしたいときワサビや醤油を足したり、
