--- a/front-page.html
+++ b/front-page.html
@@ -52,7 +52,7 @@
         </heeder>
         <main class="l-main">
             <section class="p-fv"  style="background-image: url(img/moringa.jpg);">
-                <div class="p-fv-inner">
+                <div class="p-fv-inner" data-aos="zoom-out" data-aos-duration="3000" data-aos-delay="300">
                     <h2 class="p-fv-copy">
                         <p>Moringa</p>
                         <p>Recipe</p>
@@ -69,19 +69,19 @@
                     </div>
                     <!-- /.p-news-ttl -->
                     <div class="p-news-top">
-                        <div class="p-news-top__txt">
+                        <div class="p-news-top__txt" data-aos="zoom-out" data-aos-duration="2000" data-aos-delay="800">
                             <p>美味しい、ヘルシー<br>
                                 モリンガパウダーの<br>
                                 レシピをご紹介します</p>
                         </div>
                         <!-- /.p-news-top__txt -->
-                        <div class="p-news-top__img">
+                        <div class="p-news-top__img" data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="300">
                             <figure class="p-news-top__img-inner object-fit"><img src="img/moringa-powder.png" alt="Moringa powder"></figure>
                         </div>
                     </div>
                     <!-- /.p-news-top -->
     
-                    <div class="p-news-cont">
+                    <div class="p-news-cont" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="800">
                         <div class="p-news-cont__wrap">
                             <div class="p-news-cont__ttl">
                                 <p>お知らせ</p>
@@ -155,7 +155,7 @@
                         <p>レシピ</p>
                     </div>
     
-                    <div class="p-recipe-wrap">
+                    <div class="p-recipe-wrap" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="800">
                         <ul class="p-recipe-tabs">
                             <li class="p-recipe-tab is-tab-select"><p>ご飯・麺</p></li>
                             <li class="p-recipe-tab"><p>メイン</p></li>
